--- a/OneDrive_CommunityUI.csproj
+++ b/OneDrive_CommunityUI.csproj
@@ -1,18 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <OutputType>WinExe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\WebWindow\src\WebWindow.Blazor\WebWindow.Blazor.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="wwwroot\**">
+    <Content Update="electron.manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="ElectronNET.API" Version="9.31.2" />
+    <PackageReference Include="Humanizer" Version="2.8.26" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OneDrive_CSharp\library\OneDrive_CSharp.csproj" />
+  </ItemGroup>
 </Project>
